name:                haskline
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/leptonyu/haskline#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Yu
maintainer:          leptonyu@gmail.com
copyright:           2016 Daniel Yu
category:            Shell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Console.Haskline
                     , System.Console.Haskline.Buffer
                     , System.Console.Haskline.Readline
                     , System.Console.Haskline.Action
                     , System.Console.Haskline.Env
                     , System.Console.Haskline.Command
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
  default-language:    Haskell2010

executable haskline-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskline
  default-language:    Haskell2010

test-suite haskline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskline
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leptonyu/haskline
